--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: "3.8"
 x-quorum-def:
   &quorum-def
   restart: "on-failure"
-  image: "${QUORUM_DOCKER_IMAGE:-quorumengineering/quorum:20.10.0}"
+  image: "${QUORUM_DOCKER_IMAGE:-quorumengineering/quorum:latest}"
   expose:
     - "21000"
     - "50400"
